# AVX-LR

./: .gitignore  CMakeLists.txt  README.md  build_run.sh
src/: main.cpp
src/utils/: avx.cpp  avx.hh  containers.hh  logistic_regession.hh  logistic_regression.cpp  scalar.cpp  scalar.hh  tools.hh  utils.cpp
